--- a/.github/workflows/cpanel.yml
+++ b/.github/workflows/cpanel.yml
@@ -18,3 +18,4 @@ jobs:
         server: ${{ secrets.ftp_url }}
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
+        port: 21
