--- a/.github/workflows/cpanel.yml
+++ b/.github/workflows/cpanel.yml
@@ -16,6 +16,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:        
         server: ${{ secrets.ftp_url }}
-        username: ${{ secrets.ftp_user }}
+        # username: ${{ secrets.ftp_user }}
+        username: osher@kittchens.condueet.com
         password: ${{ secrets.ftp_password }}
         port: 21
