--- a/.github/workflows/cpanel.yml
+++ b/.github/workflows/cpanel.yml
@@ -15,7 +15,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:        
-        server: ${{ secrets.ftp_url }}
+        # server: ${{ secrets.ftp_url }}
+        server: ftp.condueet.com
         # username: ${{ secrets.ftp_user }}
         username: osher@kittchens.condueet.com
         password: ${{ secrets.ftp_password }}
