--- a/.github/workflows/cpanel.yml
+++ b/.github/workflows/cpanel.yml
@@ -16,7 +16,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:        
         # server: ${{ secrets.ftp_url }}
-        server: ftp.condueet.com
+        server: sftp.condueet.com
         # username: ${{ secrets.ftp_user }}
         username: osher@kittchens.condueet.com
         password: ${{ secrets.ftp_password }}
